--- a/Bil372_Odev1_Grup6/Views/Product/Read.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Product/Read.cshtml
@@ -1,13 +1,46 @@
-﻿<!DOCTYPE html>
+﻿@model List<Bil372_Odev1_Grup6.Models.PRODUCT>
+
+<!DOCTYPE html>
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
+    <style>
+        html {
+            font-size: 15px;
+        }
+    </style>
+
 </head>
 <body>
     <div>
-    
+        <div class="col-lg-9">
+            <div class="table-responsive table--no-card m-b-30">
+                <table class="table table-borderless table-striped table-earning">
+                    <thead>
+                        <tr>
+                            <th>Kodu</th>
+                            <th>Adı</th>
+                            <th>Kısa Adı</th>
+                            <th>Üst Kodu</th>
+                            <th>Kategorisi</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {  
+                        <tr>  
+                            <td>@item.M_CODE</td>
+                            <td>@item.M_NAME</td>
+                            <td>@item.M_SHORTNAME</td>
+                            <td>@item.M_PARENTCODE</td>
+                            <td>@item.M_CATEGORY</td>
+                        </tr>
+}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </body>
 </html>
+
