--- a/Bil372_Odev1_Grup6/Views/Manufacturers/Delete.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Manufacturers/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@model List<Bil372_Odev1_Grup6.Models.MANUFACTURERS>
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -7,7 +8,56 @@
 </head>
 <body>
     <div>
+        <div class="table-responsive table-responsive-data2">
+            <table class="table table-data2">
+                <thead>
+                    <tr>
+                        <th>
+                            <label class="au-checkbox">
+                                <input type="checkbox">
+                                <span class="au-checkmark"></span>
+                            </label>
+                        </th>
+                        <th>Kodu</th>
+                        <th>Adı</th>
+                        <th>Adres</th>
+                        <th>Şehir</th>
+                        <th>Ülke Kodu</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="spacer"></tr>
+                    @foreach (var item in Model)
+                    {
+                        <tr class="tr-shadow">
+                            <td>
+                                <label class="au-checkbox">
+                                    <input type="checkbox">
+                                    <span class="au-checkmark"></span>
+                                </label>
+                            </td>
+                            <td class="desc" id="1">@item.MANUFACTURER_ID</td>
+                            <td class="desc">@item.MANUFACTURER_NAME</td>
+                            <td class="desc">@item.MANUFACTURER_ADDRESS</td>
+                            <td class="desc">@item.CITY</td>
+                            <td class="desc">@item.Country_Code</td>
+                            <td>
+                                <div class="table-data-feature">
+                                    <button class="item" data-toggle="tooltip" data-placement="top" title="Edit">
+                                        <i class="zmdi zmdi-edit"></i>
+                                    </button>
+                                    <button class="item" data-toggle="tooltip" data-placement="top" title="Delete">
+                                        <i class="zmdi zmdi-delete"></i>
+                                    </button>
 
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
 </body>
 </html>
