--- a/Bil372_Odev1_Grup6/Views/Manufacturers/Read.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Manufacturers/Read.cshtml
@@ -1,13 +1,46 @@
-﻿<!DOCTYPE html>
+﻿@model List<Bil372_Odev1_Grup6.Models.MANUFACTURERS>
+
+<!DOCTYPE html>
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
+    <style>
+        html {
+            font-size: 15px;
+        }
+    </style>
+
 </head>
 <body>
     <div>
-
+        <div class="col-lg-9">
+            <div class="table-responsive table--no-card m-b-30">
+                <table class="table table-borderless table-striped table-earning">
+                    <thead>
+                        <tr>
+                            <th>Kodu</th>
+                            <th>Adı</th>
+                            <th>Adres</th>
+                            <th>Şehir</th>
+                            <th>Ülke Kodu</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                        <tr>
+                            <td>@item.MANUFACTURER_ID</td>
+                            <td>@item.MANUFACTURER_NAME</td>
+                            <td>@item.MANUFACTURER_ADDRESS</td>
+                            <td>@item.CITY</td>
+                            <td>@item.Country_Code</td>
+                        </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </body>
 </html>
+
