--- a/Bil372_Odev1_Grup6/Views/Manufacturers/Update.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Manufacturers/Update.cshtml
@@ -1,13 +1,80 @@
-﻿<!DOCTYPE html>
+﻿@model List<Bil372_Odev1_Grup6.Models.MANUFACTURERS>
+
+<!DOCTYPE html>
+<head>
+    <style>
+        html {
+            font-size: 15px;
+        }
+    </style>
+
+</head>
 
 <html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
 
+<body>
+
+    <div class="card">
+        <div class="card-header">
+            <strong>Üretici Güncelle </strong>
+        </div>
+        <div class="card-body card-block">
+            <form action="" method="post" class="">
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Üretici Kodu</label>
+                    <input id="mid" name="mid" onChange="ValueKeyPress()" onKeyPress="ValueKeyPress()" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Üreticinin Adı</label>
+                    <input id="mname" name="mname" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Üreticinin Adresi</label>
+                    <input id="maddress" name="maddress" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Üreticinin Şehri</label>
+                    <input id="mcity" name="mcity" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Üreticinin Ülkesi</label>
+                    <input id="mcountry" name="mcountry" placeholder="" class="form-control">
+                </div>
+                <input type="submit" class="btn btn-primary btn-sm" value="Güncelle">
+            </form>
+        </div>
+        <div class="card-footer">
+
+        </div>
     </div>
 </body>
 </html>
+<script>
+
+    function ValueKeyPress() {
+        var model = '@Html.Raw(Json.Encode(Model))';
+        var data = JSON.parse(model);
+        var val = document.getElementById("mid");
+        document.getElementById("mname").value = null;
+        document.getElementById("maddress").value = null;
+        document.getElementById("mcity").value = null;
+        document.getElementById("mcountry").value = null;
+        
+
+        for (i = 0; i < data.length; i++) {
+            if (val.value == data[i].MANUFACTURER_ID) {
+                document.getElementById("mname").value = data[i].MANUFACTURER_NAME;
+                document.getElementById("maddress").value = data[i].MANUFACTURER_ADDRESS;
+                document.getElementById("mcity").value = data[i].CITY;
+                document.getElementById("mcountry").value = data[i].Country_Code;
+                
+
+            }
+
+
+        }
+
+
+        }
+
+</script>
