--- a/Bil372_Odev1_Grup6/Views/Product/Update.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Product/Update.cshtml
@@ -1,13 +1,84 @@
-﻿<!DOCTYPE html>
+﻿@model List<Bil372_Odev1_Grup6.Models.PRODUCT>
+<!DOCTYPE html>
+<head>
+    <style>
+        html {
+            font-size: 15px;
+        }
+    </style>
+
+</head>
 
 <html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
+
 <body>
-    <div>
-    
+
+    <div class="card">
+        <div class="card-header">
+            <strong>Ürün Güncelle </strong>
+        </div>
+        <div class="card-body card-block">
+            <form action="" method="post" class="">
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Sistem Kodu</label>
+                    <input id="scode" name="scode" onChange="ValueKeyPress()" onKeyPress="ValueKeyPress()" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Ürün Kodu</label>
+                    <input id="pcode" name="pcode" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Ürün Adı</label>
+                    <input id="pname" name="pname" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Ürün Kısa Adı</label>
+                    <input id="pshortname" name="pshortname" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Kategori</label>
+                    <input id="pparentcode" name="pparentcode" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Kategori</label>
+                    <input id="pcategory" name="pcategory" placeholder="" class="form-control">
+                </div>
+                <input type="submit" class="btn btn-primary btn-sm" value="Güncelle">
+            </form>
+        </div>
+        <div class="card-footer">
+
+        </div>
     </div>
 </body>
 </html>
+
+<script>
+
+    function ValueKeyPress() {
+        var model = '@Html.Raw(Json.Encode(Model))';
+        var data = JSON.parse(model);
+        var val = document.getElementById("scode");
+        document.getElementById("pcode").value = null;
+        document.getElementById("pname").value = null;
+        document.getElementById("pshortname").value = null;
+        document.getElementById("pparentcode").value = null;
+        document.getElementById("pcategory").value = null;
+        
+        for (i = 0; i < data.length; i++) {
+            if (val.value == data[i].M_SYSCODE) {
+                document.getElementById("pcode").value = data[i].M_CODE;
+                document.getElementById("pname").value = data[i].M_NAME;
+                document.getElementById("pshortname").value = data[i].M_SHORTNAME;
+                document.getElementById("pparentcode").value = data[i].M_PARENTCODE;
+                document.getElementById("pcategory").value = data[i].M_CATEGORY;
+
+            }
+            
+            
+        } 
+
+
+        }
+
+</script>
