--- a/Bil372_Odev1_Grup6/Views/Product_Brands/Create.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Product_Brands/Create.cshtml
@@ -1,13 +1,46 @@
 ﻿<!DOCTYPE html>
+<head>
+    <style>
+        html {
+            font-size: 15px;
+        }
+    </style>
+
+</head>
 
 <html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
 
+<body>
+
+    <div class="card">
+        <div class="card-header">
+            <strong>Ürün Oluştur </strong>
+        </div>
+        <div class="card-body card-block">
+            <form action="" method="post" class="">
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Üretici Kodu</label>
+                    <input id="mid" name="mid" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Ürün Sistem Kodu</label>
+                    <input id="scode" name="scode" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Marka Barkodu</label>
+                    <input id="bbarcode" name="bbarcode" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Marka Adı</label>
+                    <input id="bname" name="bname" placeholder="" class="form-control">
+                </div>
+
+                <input type="submit" class="btn btn-primary btn-sm" value="Oluştur">
+            </form>
+        </div>
+        <div class="card-footer">
+
+        </div>
     </div>
 </body>
 </html>
