--- a/Bil372_Odev1_Grup6/Views/Product_Brands/Update.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Product_Brands/Update.cshtml
@@ -1,13 +1,75 @@
-﻿<!DOCTYPE html>
+﻿@model List<Bil372_Odev1_Grup6.Models.PRODUCT_BRANDS>
+
+<!DOCTYPE html>
+<head>
+    <style>
+        html {
+            font-size: 15px;
+        }
+    </style>
+
+</head>
 
 <html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
 
+<body>
+
+    <div class="card">
+        <div class="card-header">
+            <strong>Ürün Markası Güncelle </strong>
+        </div>
+        <div class="card-body card-block">
+            <form action="" method="post" class="">
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Üretici Kodu</label>
+                    <input id="mid" name="mid" placeholder="" onChange="ValueKeyPress()" onKeyPress="ValueKeyPress()" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Ürün Sistem Kodu</label>
+                    <input id="scode" name="scode" placeholder="" onChange="ValueKeyPress()" onKeyPress="ValueKeyPress()" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Marka Barkodu</label>
+                    <input id="bbarcode" name="bbarcode" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Marka Adı</label>
+                    <input id="bname" name="bname" placeholder="" class="form-control">
+                </div>
+                <input type="submit" class="btn btn-primary btn-sm" value="Güncelle">
+            </form>
+        </div>
+        <div class="card-footer">
+
+        </div>
     </div>
 </body>
 </html>
+<script>
+
+    function ValueKeyPress() {
+        var model = '@Html.Raw(Json.Encode(Model))';
+        var data = JSON.parse(model);
+        var val1 = document.getElementById("mid");
+        var val2 = document.getElementById("scode");
+        document.getElementById("bbarcode").value = null;
+        document.getElementById("bname").value = null;
+       
+
+
+        for (i = 0; i < data.length; i++) {
+            if (val1.value == data[i].MANUFACTURER_ID && val2.value == data[i].M_SYSCODE ) {
+                document.getElementById("bbarcode").value = data[i].BRAND_BARCODE;
+                document.getElementById("bname").value = data[i].BRAND_NAME;
+                
+
+
+            }
+
+
+        }
+
+
+        }
+
+</script>
