--- a/Bil372_Odev1_Grup6/Views/Product/Delete.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Product/Delete.cshtml
@@ -13,10 +13,7 @@
                 <thead>
                     <tr>
                         <th>
-                            <label class="au-checkbox">
-                                <input type="checkbox">
-                                <span class="au-checkmark"></span>
-                            </label>
+                            
                         </th>
                         <th>Kodu</th>
                         <th>Adı</th>
@@ -32,25 +29,21 @@
                     {
                 <tr class="tr-shadow">
                     <td>
-                        <label class="au-checkbox">
-                            <input type="checkbox">
-                            <span class="au-checkmark"></span>
-                        </label>
                     </td>
-                    <td class="desc" id="1">@item.M_CODE</td>
+                    <td class="desc">@item.M_CODE</td>
                     <td class="desc">@item.M_NAME</td>
                     <td class="desc">@item.M_SHORTNAME</td>
                     <td class="desc">@item.M_PARENTCODE</td>
                     <td class="desc">@item.M_CATEGORY</td>
                     <td>
                         <div class="table-data-feature">
-                            <button class="item" data-toggle="tooltip" data-placement="top" title="Edit">
+                            <button class="item" data-toggle="tooltip" onclick="deleteFunction(0,@item.M_SYSCODE)" data-placement="top" title="Edit">
                                 <i class="zmdi zmdi-edit"></i>
                             </button>
-                            <button class="item" data-toggle="tooltip" data-placement="top" title="Delete">
+                            <button class="item" data-toggle="tooltip" onclick="deleteFunction(1,@item.M_SYSCODE)" data-placement="top" title="Delete">
                                 <i class="zmdi zmdi-delete"></i>
                             </button>
-                            
+
                         </div>
                     </td>
                 </tr>
@@ -61,3 +54,16 @@
     </div>
 </body>
 </html>
+
+<script>
+    function deleteFunction(id, syscode) {
+         var url = "@Url.Action("Delete", "Product")" + "?scode=" + syscode + "&value=" + id;
+          window.location = url;
+         
+        
+
+
+
+    }
+
+</script>
