Organisation , login and register systems are fixed.

--- a/Bil372_Odev1_Grup6/Views/Account/Register.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Account/Register.cshtml
@@ -50,43 +50,30 @@
                     <div class="card-title">Register</div>
                 </div>
                 <div class="card-body">
-                    <form action="" method="post" class="">
-                        <div class="form-group">
-                            <label for="nf-email" class=" form-control-label">Kullanıcı Adı</label>
-                            <input id="uname" name="uname" placeholder="" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="nf-email" class=" form-control-label">Şifre</label>
-                            <input id="pw" name="pw" placeholder="" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="nf-email" class=" form-control-label">Organizasyon Adı</label>
-                            <input id="oname" name="oname" placeholder="" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="nf-email" class=" form-control-label">Organizasyon Sorumlusu Adı-Soyadı</label>
-                            <input id="mname" name="mname" placeholder="" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="nf-email" class=" form-control-label">Organizasyon Emaili</label>
-                            <input id="omail" name="omail" placeholder="" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="nf-email" class=" form-control-label">Organizasyon Telefonu</label>
-                            <input id="otel" name="otel" placeholder="" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="nf-email" class=" form-control-label">Organizasyon Faksı</label>
-                            <input id="ofax" name="ofax" placeholder="" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="nf-email" class=" form-control-label">Organizasyon Adresi</label>
-                            <input id="oaddress" name="oaddress" placeholder="" class="form-control">
-                        </div>
-
-                        <input type="submit" name="submit" class="btn btn-danger" value="Kayıt ol" />
-                    </form>
+                <form action="" method="post" class="">
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Organizasyon Adı</label>
+                    <input id="oname" name="oname" placeholder="" class="form-control">
                 </div>
+                    <div class="form-group">
+                        <label for="nf-email" class=" form-control-label">Organizasyon Adresi</label>
+                        <input id="oaddress" name="oaddress" placeholder="" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="nf-email" class=" form-control-label">Organizasyon Şehri</label>
+                        <input id="ocity" name="ocity" placeholder="" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="nf-email" class=" form-control-label">Organizasyon İlçesi</label>
+                        <input id="odist" name="odist" placeholder="" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="nf-email" class=" form-control-label">Organizasyon Tipi</label>
+                        <input id="otype" name="otype" placeholder="Tedarikçi / Tüketici / Her ikiside (0/1/2)" class="form-control">
+                    </div>
+                    <input type="submit" class="btn btn-primary btn-sm" value="Oluştur">
+            </form>
+        </div>
             </div>
 
 
