--- a/Bil372_Odev1_Grup6/Views/Organisations/Create.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Organisations/Create.cshtml
@@ -1,13 +1,52 @@
 ﻿<!DOCTYPE html>
+<head>
+    <style>
+        html {
+            font-size: 15px;
+        }
+    </style>
+
+</head>
 
 <html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
 
+<body>
+
+    <div class="card">
+        <div class="card-header">
+            <strong>Organizasyon Oluştur </strong>
+        </div>
+        <div class="card-body card-block">
+            <form action="" method="post" class="">
+                <div class="form-group">
+                    <label for="nf-email" class=" form-control-label">Organizasyon Adı</label>
+                    <input id="oname" name="oname" placeholder="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <input type="hidden" id="pw" name="pw" value="@Session["userID"]">
+                    </div>
+                    <div class="form-group">
+                        <label for="nf-email" class=" form-control-label">Organizasyon Adresi</label>
+                        <input id="oaddress" name="oaddress" placeholder="" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="nf-email" class=" form-control-label">Organizasyon Şehri</label>
+                        <input id="ocity" name="ocity" placeholder="" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="nf-email" class=" form-control-label">Organizasyon İlçesi</label>
+                        <input id="odist" name="odist" placeholder="" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="nf-email" class=" form-control-label">Organizasyon Tipi</label>
+                        <input id="otype" name="otype" placeholder="Tedarikçi / Tüketici / Her ikiside (0/1/2)" class="form-control">
+                    </div>
+                    <input type="submit" class="btn btn-primary btn-sm" value="Oluştur">
+            </form>
+        </div>
+        <div class="card-footer">
+
+        </div>
     </div>
 </body>
 </html>
