Brand_orgs pages and controller are created. Organisations pages are fixed.

--- a/Bil372_Odev1_Grup6/Views/Organisations/Delete.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Organisations/Delete.cshtml
@@ -35,7 +35,7 @@
                     <td class="desc">@item.PARENT_ORG</td>
                     <td class="desc">@item.ORG_ADDRESS</td>
                     <td class="desc">@item.ORG_CITY</td>
-                    <td class="desc">Eksik</td>
+                    <td class="desc">@item.ORG_DISTRICT</td>
                     <td class="desc">@item.ORG_TYPE</td>
                     <td>
                         <div class="table-data-feature">
