--- a/Bil372_Odev1_Grup6/Views/Organisations/Read.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Organisations/Read.cshtml
@@ -35,7 +35,7 @@
                                 <td>@item.PARENT_ORG</td>
                                 <td>@item.ORG_ADDRESS</td>
                                 <td>@item.ORG_CITY</td>
-                                <td>Eksik</td>
+                                <td>@item.ORG_DISTRICT</td>
                                 <td>@item.ORG_TYPE</td>
                             </tr>
                         }
