--- a/Bil372_Odev1_Grup6/Views/Organisations/Update.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Organisations/Update.cshtml
@@ -76,7 +76,7 @@
                 document.getElementById("pid").value = data[i].PARENT_ORG;
                 document.getElementById("oaddress").value = data[i].ORG_NAME;
                 document.getElementById("ocity").value = data[i].ORG_CITY;
-                //DİST
+                document.getElementById("odist").value = data[i].ORG_DISTRICT;
                 document.getElementById("otype").value = data[i].ORG_TYPE;
 
             }
