--- a/Bil372_Odev1_Grup6/Views/Brand_Orgs/Search1.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Brand_Orgs/Search1.cshtml
@@ -31,6 +31,7 @@
                 <table class="table table-borderless table-striped table-earning">
                     <thead>
                         <tr>
+                            <th>Marka Adı</th>
                             <th>Organizasyon Adı</th>
                             <th>Miktar</th>
                             <th>Birim</th>
@@ -42,15 +43,16 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>@item.ORG_NAME</td>
-                                <td>@item.QUANTITY</td>
-                                <td>@item.UNIT</td>
-                                <td>@item.BASEPRICE</td>
-                                <td>@item.INNN</td>
-                                <td>@item.OUTTTT</td>
-                                
-                            </tr>
+                        <tr>
+                            <td>@item.BRAND_NAME</td>
+                            <td>@item.ORG_NAME</td>
+                            <td>@item.QUANTITY</td>
+                            <td>@item.UNIT</td>
+                            <td>@item.BASEPRICE</td>
+                            <td>@item.INNN</td>
+                            <td>@item.OUTTTT</td>
+
+                        </tr>
                         }
                     </tbody>
                 </table>
