ProductFeatures pages and controllers are created

--- a/Bil372_Odev1_Grup6/Views/Shared/_Layout.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Shared/_Layout.cshtml
@@ -186,6 +186,23 @@
 
                             </ul>
                         </li>
+                        <li class="active has-sub">
+                            <a class="js-arrow" href="#">
+                                <i class="fas fa-copy"></i>PRODUCT_FEATURES
+                            </a>
+                            <ul class="list-unstyled navbar__sub-list js-sub-list">
+                                <li>
+                                    <a href="~/Product_Features/Create">CREATE</a>
+                                </li>
+                                <li>
+                                    <a href="~/Product_Features/Search1">SEARCHWITHPRODUCT</a>
+                                </li>
+                                <li>
+                                    <a href="~/Product_Features/Search2">SEARCHWITHFEATURE</a>
+                                </li>
+
+                            </ul>
+                        </li>
                         <li>
                             <a href="@Url.Action("LogOut","Account")">
 
