--- a/Bil372_Odev1_Grup6/Views/Product_Brands/Delete.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Product_Brands/Delete.cshtml
@@ -54,7 +54,7 @@
 
 <script>
    function deleteFunction(id, syscode, bcode) {
-         var url = "@Url.Action("Delete", "Product")" + "?scode=" + syscode + "&bcd=" + bcode + "&value=" + id;
+         var url = "@Url.Action("Delete", "Product_Brands")" + "?scode=" + syscode + "&bcd=" + bcode + "&value=" + id;
           window.location = url;
 
 
